tree-sitter-darklang/grammar.js
    source_file: $ =>
      seq(
        // all module, type, fn and constant defs first
        repeat(choice($.module_decl, $.type_decl, $.fn_decl, $.const_decl)),

        // then the expressions to evaluate, in order
        repeat($.expression),
      ),

    fn_decl: $ =>
      seq(
        field("keyword_let", alias("let", $.keyword)),
        field("name", $.fn_identifier),
        optional(field("type_params", $.type_params)),
        field("params", $.fn_decl_params),
        field("symbol_colon", alias(":", $.symbol)),
        field("return_type", $.type_reference),
        field("symbol_equals", alias("=", $.symbol)),
        choice(
          seq($.indent, field("body", $.expression), $.dedent),
          field("body", $.expression),
        ),
      ),
    fn_decl_params: $ => repeat1(choice($.unit, $.fn_decl_param)),
    type_decl: $ =>
      seq(
        field("keyword_type", alias("type", $.keyword)),
        field("name", $.type_identifier),
        optional(field("type_params", $.type_params)),
        field("symbol_equals", alias("=", $.symbol)),
        field("typ", $.type_decl_def),
      ),

    // definition
    type_decl_def: $ =>
      choice(
        $.type_decl_def_alias,
        $.type_decl_def_record,
        $.type_decl_def_enum,
      ),

    //
    // Alias
    type_decl_def_alias: $ => $.type_reference,

    //
    // Record
    // e.g. `type Person = { name: String; age: Int }`
    // TODO: allow multi-line records where a newline is 'interpreted' as a record delimiter (i.e. no ; needed)
    simple_expression: $ =>
      choice(
        $.unit,
        $.bool_literal,
        $.int8_literal,
        $.uint8_literal,
        $.int16_literal,
        $.uint16_literal,
        $.int32_literal,
        $.uint32_literal,
        $.int64_literal,
        $.uint64_literal,
        $.int128_literal,
        $.uint128_literal,
        $.float_literal,
        $.string_segment,
        $.char_literal,
        $.list_literal,
        $.dict_literal,
        $.record_literal,
        $.enum_literal,
        $.variable_identifier,
        $.field_access,
        $.tuple_literal,
        $.qualified_const_name,
        // $.qualified_fn_name,
        $.record_update,
      ),

    expression: $ =>
      choice(
        $.paren_expression,
        $.simple_expression,
        $.if_expression,
        $.let_expression,

        $.match_expression,

        $.infix_operation,
        $.apply,

        $.lambda_expression,
        $.pipe_expression,
      ),

    paren_expression: $ =>
      seq(
        field("symbol_left_paren", alias("(", $.symbol)),
        field("expr", $.expression),
        field("symbol_right_paren", alias(")", $.symbol)),
      ),

    //
    // Booleans
    bool_literal: $ => choice(/true/, /false/),

    //
    // Strings
    // TODO: maybe add support for multiline strings (""")
    string_literal: $ =>
      choice(
        seq(
          field("symbol_open_quote", alias('"', $.symbol)),
          optional(field("content", $.string_content)),
          field("symbol_close_quote", alias('"', $.symbol)),
        ),
        // multiline strings
        seq(
          field("symbol_open_quote", alias('"""', $.symbol)),
          optional(field("content", $.multiline_string_content)),
          field("symbol_close_quote", alias('"""', $.symbol)),
        ),
      ),

    string_content: $ =>
      repeat1(
        choice(
          // higher precedence than escape sequences
          token.immediate(prec(1, /[^\\"]+/)),
          $.char_or_string_escape_sequence,
        ),
      ),

    string_segment: $ => choice($.string_literal, $.string_interpolation),

    //
    // Characters
    infix_operation: $ =>
      // given `1 + 2 * 3`, this will parse as `1 + (2 * 3)`
      choice(
        // Power
        prec.right(
          PREC.EXPONENT,
          seq(
            field("left", $.expression),
            field("operator", alias(exponentOperator, $.operator)),
            field("right", $.expression),
          ),
        ),

        // multiplication, division, modulo
        prec.left(
          PREC.PRODUCT,
          seq(
            field("left", $.expression),
            field("operator", alias(multiplicativeOperators, $.operator)),
            field("right", $.expression),
          ),
        ),

        // addition, subtraction
        prec.left(
          PREC.SUM,
          seq(
            field("left", $.expression),
            field("operator", alias(additiveOperators, $.operator)),
            field("right", $.expression),
          ),
        ),

        // Comparison
        prec.left(
          PREC.COMPARISON,
          seq(
            field("left", $.expression),
            field("operator", alias(comparisonOperators, $.operator)),
            field("right", $.expression),
          ),
        ),

        // Logical operations
        prec.left(
          PREC.LOGICAL_AND,
          seq(
            field("left", $.expression),
            field("operator", alias(logicalOperators, $.operator)),
            field("right", $.expression),
          ),
        ),
        prec.left(
          PREC.LOGICAL_OR,
          seq(
            field("left", $.expression),
            field("operator", alias(logicalOperators, $.operator)),
            field("right", $.expression),
          ),
        ),

        // String concatenation
        prec.left(
          PREC.SUM,
          seq(
            field("left", $.expression),
            field("operator", alias(stringConcatOperator, $.operator)),
            field("right", $.expression),
          ),
        ),
      ),

    //
    // Integers
    //CLEANUP: we are using .NET suffixes for integers (e.g. `1L` for Int64) temporarily until we remove the old parser.
    int64_literal: $ =>
      seq(field("digits", $.digits), field("suffix", alias("L", $.symbol))),

    uint128_literal: $ =>
      seq(
        field("digits", $.positive_digits),
        field("suffix", alias("Z", $.symbol)),
      ),

    digits: $ => choice($.positive_digits, $.negative_digits),
    positive_digits: $ => /\d+/,

    //
    // Floats
    float_literal: $ => /[+-]?[0-9]+\.[0-9]+/,

    //
    // List
    // TODO: allow multi-line lists where a newline is 'interpreted' as a list delimiter (i.e. no ; needed)
    list_literal: $ => list_literal_base($, $.list_content),
    list_content: $ => list_content_base($, $.expression),

    //
    // Dict
    tuple_literal: $ =>
      tuple_literal_base($, $.expression, $.tuple_literal_the_rest),
    tuple_literal_the_rest: $ => tuple_literal_the_rest_base($, $.expression),

    //
    // Record
    record_literal: $ =>
      seq(
        field("type_name", $.qualified_type_name),
        field("symbol_open_brace", alias("{", $.symbol)),
        optional(field("content", $.record_content)),
        field("symbol_close_brace", alias("}", $.symbol)),
      ),
    record_content: $ =>
      choice(
        seq(
          $.record_pair,
          repeat(
            seq(field("record_separator", alias(";", $.symbol)), $.record_pair),
          ),
        ),
        // seq($.indent, repeat(seq($.record_pair, $.newline)), $.dedent),
        seq(
          $.record_pair,
          repeat(seq($.newline, $.record_pair)),
          optional($.newline),
        ),
      ),
    record_pair: $ =>
      seq(
        field("field", $.variable_identifier),
        field("symbol_equals", alias("=", $.symbol)),
        field("value", $.expression),
      ),

    //
    // Record update
    // e.g. { RecordForUpdate { x = 4L; y = 1L } with y = 2L }
    enum_literal: $ => enum_literal_base($, $.enum_fields),
    enum_fields: $ => enum_fields_base($, $.expression),

    //
    // If expressions
    lambda_expression: $ =>
      seq(
        field("keyword_fun", alias("fun", $.keyword)),
        field("pats", $.lambda_pats),
        field("symbol_arrow", alias("->", $.symbol)),
        field("body", $.expression),
      ),
    lambda_pats: $ => field("pat", repeat1($.let_pattern)),

    let_pattern: $ => choice($.unit, $.lp_tuple, $.variable_identifier),

    //
    // Match expression
    // TODO : allow one-line match expressions (i.e. match x with | 1 -> ...)
    apply: $ =>
      prec.right(
        seq(
          // TODO: fn should be an expression
          field("fn", $.qualified_fn_name),
          choice(
            field(
              "args",
              repeat1(choice($.paren_expression, $.simple_expression)),
            ),
            seq(
              $.indent,
              field("args", seq($.expression, repeat(seq(/\n/, $.expression)))),
              $.dedent,
            ),
          ),
          // the new line is used as a delimiter
          optional($.newline),
        ),
      ),

    //
    // Let expression
    let_expression: $ =>
      seq(
        field("keyword_let", alias("let", $.keyword)),
        field("pattern", $.let_pattern),
        field("symbol_equals", alias("=", $.symbol)),
        choice(
          seq(field("expr", $.expression), "\n"),
          seq($.indent, field("expr", $.expression), $.dedent, optional("\n")),
        ),
        field("body", $.expression),
      ),

    // ---------------------
    // Pipe expressions
    // ---------------------

    //
    // Pipe lambda
    operator: $ =>
      choice(
        exponentOperator,
        multiplicativeOperators,
        additiveOperators,
        comparisonOperators,
        logicalOperators,
        stringConcatOperator,
      ),

    type_reference: $ => choice($.builtin_type, $.qualified_type_name),

    builtin_type: $ =>
      choice(
        /Unit/,
        /Bool/,
        /Int8/,
        /UInt8/,
        /Int16/,
        /UInt16/,
        /Int32/,
        /UInt32/,
        /Int64/,
        /UInt64/,
        /Int128/,
        /UInt128/,
        /Float/,
        /Char/,
        /String/,
        /DateTime/,
        /Uuid/,
        $.list_type_reference,
        $.tuple_type_reference,
        $.dict_type_reference,
        $.fn_type_reference,
        $.variable_type_reference,

        $.db_type_reference,
      ),

    //
    // List<T>
    qualified_fn_name: $ =>
      seq(
        seq(
          repeat(seq($.module_identifier, alias(".", $.symbol))),
          $.fn_identifier,
        ),
        optional(field("type_args", $.type_args)),
      ),

    qualified_type_name: $ =>
      seq(
        seq(
          repeat(seq($.module_identifier, alias(".", $.symbol))),
          field("type_identifier", $.type_identifier),
        ),
        optional(field("type_args", $.type_args)),
      ),

    variable_identifier: $ => prec(PREC.VAR_IDENTIFIER, /[a-z_][a-zA-Z0-9_]*/),

    // e.g. `double` in `let double (x: Int) = x + x`
    fn_identifier: $ => prec(PREC.FN_IDENTIFIER, /[a-z_][a-zA-Z0-9_]*/),

    // e.g. `Person` in `type MyPerson = ...`
    type_identifier: $ => /[A-Z][a-zA-Z0-9_]*/,

    // e.g. `LanguageTools in `PACKAGE.Darklang.LanguageTools.SomeType`
    module_identifier: $ => /[A-Z][a-zA-Z0-9_]*/,

    //
    enum_case_identifier: $ => /[A-Z][a-zA-Z0-9_]*/,

    newline: $ => /\n/,

    unit: $ => "()",
