tree-sitter-darklang/test/corpus/exhaustive/exprs/Record.txt
==================
Record -one field
==================

Person {name = "John"}

---

(source_file
  (expression
    (simple_expression (record_literal
      (qualified_type_name (type_identifier))
      (symbol)
      (record_content
        (record_pair (variable_identifier) (symbol) (expression (simple_expression (string_segment (string_literal (symbol) (string_content) (symbol))))))
      )
      (symbol)
    ))
  )
)


==================
Record -two fields
==================

Person {name = "John"; age = 30L}

---

(source_file
  (expression
    (simple_expression (record_literal
      (qualified_type_name (type_identifier))
      (symbol)
      (record_content
        (record_pair (variable_identifier) (symbol) (expression (simple_expression (string_segment (string_literal (symbol) (string_content) (symbol))))))
        (symbol)
        (record_pair (variable_identifier) (symbol) (expression (simple_expression (int64_literal (digits (positive_digits)) (symbol)))))
      )
      (symbol)
    ))
  )
)


==================
Record -multiple fields
==================

Person {name = "John"; age = 30L; hobbies = ["reading"; "swimming"]}

---

(source_file
  (expression
    (simple_expression (record_literal
      (qualified_type_name (type_identifier))
        (symbol)
        (record_content
          (record_pair (variable_identifier) (symbol) (expression (simple_expression (string_segment (string_literal (symbol) (string_content) (symbol))))))
          (symbol)
          (record_pair (variable_identifier) (symbol) (expression (simple_expression (int64_literal (digits (positive_digits)) (symbol)))))
          (symbol)
          (record_pair (variable_identifier) (symbol)
            (expression (simple_expression (list_literal
              (symbol)
              (list_content
                (expression (simple_expression (string_segment (string_literal (symbol) (string_content) (symbol)))))
                (symbol)
                (expression (simple_expression (string_segment (string_literal (symbol) (string_content) (symbol)))))
              )
              (symbol)))
            )
          )
        )
        (symbol)
    ))
  )
)


==================
Record -nested Record
==================

Person {name = "John"; address = Address {city = "New York"; street = "5th Avenue"}}

---

(source_file
  (expression
    (simple_expression
      (record_literal
        (qualified_type_name (type_identifier))
        (symbol)
        (record_content
          (record_pair
            (variable_identifier)
            (symbol)
            (expression (simple_expression (string_segment (string_literal (symbol) (string_content) (symbol)))))
          )
          (symbol)
          (record_pair
            (variable_identifier)
            (symbol)
            (expression
              (simple_expression
                (record_literal
                  (qualified_type_name (type_identifier))
                  (symbol)
                  (record_content
                    (record_pair
                      (variable_identifier)
                      (symbol)
                      (expression
                        (simple_expression
                          (string_segment (string_literal (symbol) (string_content) (symbol)))
                        )
                      )
                    )
                    (symbol)
                    (record_pair
                      (variable_identifier)
                      (symbol)
                      (expression
                        (simple_expression
                          (string_segment (string_literal (symbol) (string_content) (symbol)))
                        )
                      )
                    )
                  )
                  (symbol)
                )
              )
            )
          )
        )
        (symbol)
      )
    )
  )
)



==================
Record -muliple fields with newline
==================

Person {
  name = "John"
  age = 30L
  hobbies = ["reading"; "swimming"]
}

---

(source_file
  (expression
    (simple_expression
      (record_literal
        (qualified_type_name (type_identifier))
        (symbol)
        (record_content
          (record_pair
            (variable_identifier)
            (symbol)
            (expression (simple_expression (string_segment (string_literal (symbol) (string_content) (symbol)))))
          )
          (newline)
          (record_pair
            (variable_identifier)
            (symbol)
            (expression (simple_expression (int64_literal (digits (positive_digits)) (symbol))))
          )
          (newline)
          (record_pair
            (variable_identifier)
            (symbol)
            (expression
              (simple_expression
                (list_literal
                  (symbol)
                  (list_content
                    (expression (simple_expression (string_segment (string_literal (symbol) (string_content) (symbol)))))
                    (symbol)
                    (expression (simple_expression (string_segment (string_literal (symbol) (string_content) (symbol)))))
                  )
                  (symbol)
                )
              )
            )
          )
          (newline)
        )
        (symbol)
      )
    )
  )
)


==================
test
==================

(Stdlib.Html.script
  [ ("src", Stdlib.Option.Option.Some "https://cdn.tailwindcss.com") ]
  []
)
|> nodeToString
== "<script src=\"https://cdn.tailwindcss.com\"></script>"

---
