tree-sitter-darklang/test/corpus/exhaustive/exprs/bools.txt
==================
true
==================

true

---

(source_file (expression (simple_expression (bool_literal))))


==================
false
==================

false

---

(source_file (expression (simple_expression (bool_literal))))


==================
TRUE (error)
==================

TRUE

---

(source_file (expression (simple_expression (dbReference (type_identifier)))))


==================
FALSE (error)
==================

FALSE

---

(source_file (expression (simple_expression (dbReference (type_identifier)))))



==================
True (error)
==================

True

---

(source_file (expression (simple_expression (dbReference (type_identifier)))))

==================
False (error)
==================

False

---

(source_file (expression (simple_expression (dbReference (type_identifier)))))